@@ -3,8 +3,9 @@ package net.particify.arsnova.core.controller;
 import com.fasterxml.jackson.annotation.JsonView;
 import jakarta.servlet.http.HttpServletRequest;
 import java.util.Arrays;
-import java.util.List;
 import java.util.Locale;
+import java.util.Set;
+import java.util.TreeSet;
 import java.util.stream.Collectors;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.RequestMapping;
@@ -18,21 +19,25 @@ public class LanguageController {
   public static final String REQUEST_MAPPING = "/language";
 
   @GetMapping("/")
-  public List<Language> getLanguages(final HttpServletRequest request) {
+  public Set<Language> getLanguages(final HttpServletRequest request) {
     final String acceptLanguage = request.getHeader("Accept-Language");
     final Locale requestLocale = acceptLanguage != null && acceptLanguage.length() >= 2
-        ? new Locale(acceptLanguage.substring(0, 2))
-        : new Locale("en");
+        ? Locale.of(acceptLanguage.substring(0, 2))
+        : Locale.of("en");
     return Arrays.stream(Locale.getISOLanguages())
-        .map(lang -> new Locale(lang))
+        .map(lang -> Locale.of(lang))
         .map(locale -> new Language(
             locale.getLanguage(),
             locale.getDisplayLanguage(locale),
             locale.getDisplayLanguage(requestLocale)))
-        .collect(Collectors.toList());
+        .collect(Collectors.toCollection(TreeSet::new));
   }
 
   @JsonView(View.Public.class)
-  private record Language(String code, String nativeName, String localizedName) {
+  private record Language(String code, String nativeName, String localizedName) implements Comparable<Language> {
+    @Override
+    public int compareTo(final Language language) {
+      return this.code.compareTo(language.code);
+    }
   }
 }
